[K4.0] Crypsis: Fix broken layout category item

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -677,7 +677,7 @@ small.text-muted {
 	padding-top : 20px;
 }
 
-#index-avatar .media {
+.media {
 	padding-right : 10px;
 }
 
